[package]
name = "mfl-inv"
version = "0.1.0"
edition = "2021"
description = "MFL (Magnetic Flux Leakage) pipeline defect inversion CLI for offshore oil & gas inspection"
license = "MIT"

[[bin]]
name = "mfl-inv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
memmap2 = "0.9"
rayon = "1.10"
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"
byteorder = "1.5"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
